[package]
name = "aizasy_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# 必须显式开启 rustls，避免依赖系统的 OpenSSL (静态链接的关键)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
